<resources>
    <string name="app_name">My Music</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="artist">artist</string>
    <string name="_00_00">00:00</string>
    <string name="not_found_lyric">NO embedded lyric found</string>
    <string name="lyric">Lyric</string>
    <string name="cancel">Cancel</string>
    <string name="set_minutes">Set minutes…</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="favorite">Favorite</string>
    <string name="play_lists">Play lists</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="playlist">Playlist</string>
    <string name="about">About</string>
    <string name="play_next">play_next</string>
    <string name="add_to">Add to</string>
    <string name="about_us">About us</string>
</resources>
