<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sleepTimer"
            android:icon="@drawable/ic_timer"
            android:title="@string/sleep_timer" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about" />
    </group>

    <item android:title="@string/play_lists">
        <menu>
            <item
                android:id="@+id/addNewPlaylist"
                android:icon="@drawable/ic_new"
                android:title="@string/add_new_playlist" />
            <item
                android:id="@+id/favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/favorite" />
        </menu>
    </item>
</menu>
